@@ -1,7 +1,7 @@
 The DocumentInformation Class
 -----------------------------
 
-.. autoclass:: PyPDF2.pdf.DocumentInformation
+.. autoclass:: PyPDF2.generic.DocumentInformation
     :members:
     :undoc-members:
     :show-inheritance:
