@@ -1,7 +1,7 @@
 The PageObject Class
 --------------------
 
-.. autoclass:: PyPDF2.pdf.PageObject
+.. autoclass:: PyPDF2._page.PageObject
     :members:
     :undoc-members:
     :show-inheritance:
